src/test/ui/consts/issue-3521.stderr
error[E0435]: attempt to use a non-constant value in a constant
  --> $DIR/issue-3521.rs:8:15
   |
LL |     let foo: isize = 100;
   |     ------- help: consider using `const` instead of `let`: `const foo`
...
LL |         Bar = foo
   |               ^^^ non-constant value

error: failed to evaluate the given constant
  --> $DIR/issue-3521.rs:8:15
   |
LL |         Bar = foo
   |               ^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0435`.
